# metered-finance-api

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  switch-env.sh
migrations/: 20250917020016_init_accounts.down.sql  20250917020016_init_accounts.up.sql  20250917020424_init_transactions.down.sql  20250917020424_init_transactions.up.sql  20250917021720_init_idempotency.down.sql  20250917021720_init_idempotency.up.sql  20250917022316_init_api_keys.down.sql  20250917022316_init_api_keys.up.sql  20250917022802_init_requests_log.down.sql  20250917022802_init_requests_log.up.sql  20250917023046_add_cleanup_function.down.sql  20250917023046_add_cleanup_function.up.sql  20251127214207_add_quotas.down.sql  20251127214207_add_quotas.up.sql
src/: app.rs  config.rs  lib.rs  main.rs  openapi.rs  routes.rs
src/db/: mod.rs
src/handlers/: accounts.rs  analytics.rs  health.rs  keys.rs  metrics.rs  mod.rs  transactions.rs  usage.rs
src/middleware/: auth.rs  errors.rs  mod.rs  rate_limit.rs  request_id.rs  request_logging.rs
src/models/: analytics.rs  common.rs  finance.rs  keys.rs  mod.rs  quota.rs  requests.rs  responses.rs
tests/: account_handlers_tests.rs  auth_tests.rs  common_tests.rs  error_tests.rs  finance_tests.rs  keys_tests.rs  quota_tests.rs  request_logging_tests.rs  responses_tests.rs  transaction_handlers_tests.rs  transaction_meta_handlers_tests.rs
