[package]
name = "metered-finance-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-prometheus = "0.9.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "json"] }
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "set-header", "timeout"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
