[package]
name = "metered-finance-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.3.1"
http-body = "1.0.1"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "tls-rustls", "chrono"] }
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "set-header", "timeout", "request-id"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
